--- a/hugo/static/css/custom.css
+++ b/hugo/static/css/custom.css
@@ -1,8 +1,7 @@
-.menu-item {
-    margin-bottom: 20px;
-}
-
-.book-logo {
-    width: 400px;
+.menu-bar::before {
+    content: url('/STRONG-AYA-web-logo.svg'); /* Adjust the path to your logo */
+    display: inline-block;
+    width: 50px;
     height: auto;
+    margin-right: 20px;
 }
